--- a/NoteDemo/app/src/main/res/layout/content_webview2.xml
+++ b/NoteDemo/app/src/main/res/layout/content_webview2.xml
@@ -50,6 +50,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
     <com.ruaho.note.view.PostilView
+            android:id="@+id/mypostilview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#00000000"/>
