--- a/NoteDemo/app/src/main/res/layout/preview_content_webview.xml
+++ b/NoteDemo/app/src/main/res/layout/preview_content_webview.xml
@@ -24,6 +24,7 @@
             android:layout_toRightOf="@+id/note_back"
             android:layout_marginLeft="20dp"
             android:textColor="@color/red"
+            android:visibility="gone"
             android:text="保存"/>
         <TextView
             android:id="@+id/mbiaoji"
