--- a/NoteDemo/app/src/main/res/layout/activity_addwords.xml
+++ b/NoteDemo/app/src/main/res/layout/activity_addwords.xml
@@ -14,15 +14,20 @@
         <TextView
             android:id="@+id/preview_word_close_txt"
             android:layout_width="wrap_content"
-            android:layout_height="20dp"
+            android:layout_height="wrap_content"
             android:paddingLeft="20dp"
             android:textColor="@color/red"
             android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:textSize="@dimen/preview_top_txt_size"
             android:text="@string/preview_word_close"/>
         <TextView
+            android:id="@+id/preview_word_close_title_txt"
             android:layout_width="wrap_content"
-            android:layout_height="20dp"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/preview_top_txt_size"
             android:text="添加"
+            android:textStyle="bold"
             android:layout_centerInParent="true"/>
     </RelativeLayout>
     <EditText
