--- a/NoteDemo/app/src/main/res/layout/preview_content_webview.xml
+++ b/NoteDemo/app/src/main/res/layout/preview_content_webview.xml
@@ -142,7 +142,8 @@
             android:id="@+id/preview_seekbar"
             android:layout_marginTop="@dimen/preview_bottom_bar_btn_margintop"
             android:layout_width="@dimen/preview_bottom_seekbar_width"
-            android:layout_height="@dimen/preview_bottom_bar_btn_height" />
+            android:layout_height="@dimen/preview_bottom_bar_btn_height"
+            android:progress="10"/>
         <ImageView
             android:id="@+id/preview_pen"
             android:layout_width="@dimen/note_bar_default_width"
