--- a/NoteDemo/app/src/main/res/layout/preview_change_color_layout.xml
+++ b/NoteDemo/app/src/main/res/layout/preview_change_color_layout.xml
@@ -7,27 +7,35 @@
     android:paddingLeft="20dp"
     android:orientation="horizontal">
     <com.ruaho.note.view.ColorBlockView
+        app:mColor="@color/red"
         android:layout_width="@dimen/preview_color_block_height"
         android:layout_height="@dimen/preview_color_block_height" />
     <com.ruaho.note.view.ColorBlockView
+        app:mColor="@color/orange"
         android:layout_width="@dimen/preview_color_block_height"
         android:layout_height="@dimen/preview_color_block_height" />
     <com.ruaho.note.view.ColorBlockView
+        app:mColor="@color/yellow"
         android:layout_width="@dimen/preview_color_block_height"
         android:layout_height="@dimen/preview_color_block_height" />
     <com.ruaho.note.view.ColorBlockView
+        app:mColor="@color/green"
         android:layout_width="@dimen/preview_color_block_height"
         android:layout_height="@dimen/preview_color_block_height" />
     <com.ruaho.note.view.ColorBlockView
+        app:mColor="@color/white"
         android:layout_width="@dimen/preview_color_block_height"
         android:layout_height="@dimen/preview_color_block_height" />
     <com.ruaho.note.view.ColorBlockView
+        app:mColor="@color/sky_blue"
         android:layout_width="@dimen/preview_color_block_height"
         android:layout_height="@dimen/preview_color_block_height" />
     <com.ruaho.note.view.ColorBlockView
+        app:mColor="@color/dark_blue"
         android:layout_width="@dimen/preview_color_block_height"
         android:layout_height="@dimen/preview_color_block_height" />
     <com.ruaho.note.view.ColorBlockView
+        app:mColor="@color/purple"
         android:layout_width="@dimen/preview_color_block_height"
         android:layout_height="@dimen/preview_color_block_height" />
     <com.ruaho.note.view.ColorBlockView
