--- a/NoteDemo/app/src/main/res/values/dimens.xml
+++ b/NoteDemo/app/src/main/res/values/dimens.xml
@@ -14,4 +14,5 @@
     <dimen name="preview_bottom_bar_btn_height">35dp</dimen>
     <dimen name="preview_bottom_bar_btn_margintop">25dp</dimen>
     <dimen name="preview_bottom_seekbar_width">200dp</dimen>
+    <dimen name="preview_color_margin">1.5dp</dimen>
 </resources>
