--- a/NoteDemo/app/src/main/res/values/attrs.xml
+++ b/NoteDemo/app/src/main/res/values/attrs.xml
@@ -2,5 +2,6 @@
 <resources>
     <declare-styleable name="previewcolor">
         <attr name="mColor" format="color"/>
+        <attr name="mSelect" format="boolean"/>
     </declare-styleable>
 </resources>
