--- a/NoteDemo/app/src/main/res/values/colors.xml
+++ b/NoteDemo/app/src/main/res/values/colors.xml
@@ -11,7 +11,8 @@
     <color name="white">#FFFFFF</color>
     <color name="sky_blue">#87CEFF</color>
     <color name="dark_blue">#3A5FCD</color>
-    <color name="purple">#4B0082</color>
+    <color name="purple">#9b33e4</color>
+    <color name="dark_purple">#4B0082</color>
     <color name="dark_gray">#424242</color>
     <color name="preview_bottom_gray">#969696</color>
 
